--- a/css/styles.css
+++ b/css/styles.css
@@ -32,43 +32,48 @@ header {
     padding: 3em 1em;
     color: white;
     background-image: url('/img/Hero-img-Home.jpg');
-    /* Korrekt filnamn och sökväg */
     background-size: cover;
     background-position: center;
     height: 400px;
-    /* Justera höjden om det behövs */
 }
 
 .hero h1 {
     font-size: 3em;
-    /* Ändra storleken på rubriken */
     font-weight: bold;
-    /* För att göra rubriken mer framträdande */
 }
 
 .hero p {
     font-size: 1.5em;
-    /* Ändra storleken på texten under rubriken */
 }
 
-/* Landing Page Features */
-.landing-page .features {
+.features {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
     gap: 20px;
     padding: 2em;
     background: #f9f9f9;
     max-width: 1500px;
-          /* Maximal bredd för sektionen */
     margin: 0 auto;
-            /* Centrerar sektionen horisontellt */
     text-align: center;
-            /* Justerar texten i varje ruta till mitten */
-        
-    
 }
 
 /* Cards Page Styles */
+.cards-page {
+    text-align: center;
+}
+.cards-page h1 {
+    text-align: center;
+    font-size: 2.5em;
+    color: white;
+    padding: 2em 0;
+    margin: 0;
+    background-image: url('/img/Hero-img-Products.jpg');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.6);
+}
+
 .cards-container {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
@@ -84,12 +89,46 @@ header {
     border: 1px solid #ddd;
     padding: 1em;
     border-radius: 8px;
+    height: 300px;
+    transition: transform 0.3s ease, background-color 0.3s ease;
+    position: relative;
+    overflow: hidden;
 }
 
-.card img {
-    width: 100%;
-    max-width: 200px;
+.card:hover {
+    transform: scale(1.1);
+    background-color: #1e8449;
+}
+
+.card h2,
+.card p {
+    z-index: 2;
+}
+
+
+.card-text {
+    position: absolute;
+    top: 40%;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    font-size: 1.1em;
+    color: white;
+    opacity: 0;
+    transform: translateY(-20px);
+    transition: opacity 0.3s ease, transform 0.3s ease;
+    padding: 20px;
+    background-color: #1e8449(0, 0, 0, 0.7);
     border-radius: 8px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+}
+
+.card:hover .card-text {
+    opacity: 1;
+    transform: translateY(0);
 }
 
 .card1 {
@@ -131,7 +170,6 @@ header {
     border-radius: 8px;
 }
 
-/* Gradient Footer */
 footer {
     text-align: center;
     background: linear-gradient(135deg, #27ae60, #85d88a);
